--- a/platformio.ini
+++ b/platformio.ini
@@ -5,17 +5,14 @@ board = esp32dev
 upload_speed = 921000
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
-build_flags = 
-	-Ofast
-	-Wno-missing-field-initializers
+build_flags = -Wno-missing-field-initializers
 board_build.f_cpu = 240000000L
 board_build.f_flash = 80000000L
 board_build.partitions = partitions.csv
 board_build.embed_txtfiles = 
 	binary/webpage/index.html
 	binary/cer/cer.crt
-lib_deps = 
-	bblanchon/ArduinoJson
+lib_deps = bblanchon/ArduinoJson
 
 [env:release]
 build_type = release
