Modification to cppcheck

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,8 @@ board_build.embed_txtfiles =
 	binary/webpage/index.html
 	binary/cer/cer.crt
 lib_deps = bblanchon/ArduinoJson
+check_skip_packages = yes
+check_flags = --enable=all
 
 [env:release]
 build_type = release
