--- a/platformio.ini
+++ b/platformio.ini
@@ -7,7 +7,10 @@ monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 check_skip_packages = yes
 check_flags = --enable=all
-build_flags = -Wno-missing-field-initializers
+build_flags = 
+	-Wno-missing-field-initializers 
+	-Wextra 
+	-Ofast
 board_build.f_cpu = 240000000L
 board_build.f_flash = 80000000L
 board_build.partitions = partitions.csv
