--- a/platformio.ini
+++ b/platformio.ini
@@ -7,24 +7,22 @@ monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 check_skip_packages = yes
 check_flags = --enable=all
-build_flags = 
+build_flags =
 	-Wno-missing-field-initializers 
-	-Wextra 
-	-Ofast
-board_build.f_cpu = 240000000L
-board_build.f_flash = 80000000L
+	-Wextra
 board_build.partitions = partitions.csv
-board_build.embed_txtfiles = 
+board_build.embed_txtfiles =
 	binary/webpage/index.html
-	binary/cer/cer.crt
 lib_deps = bblanchon/ArduinoJson
-
 
 [env:release]
 build_type = release
+build_flags =
+	${env.build_flags}
+	-Ofast
 
 [env:debug]
 build_type = debug
-build_flags = 
+build_flags =
 	${env.build_flags}
 	-D UNIT_DEBUG
