--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,11 @@ check_skip_packages = yes
 check_flags = --enable=all
 build_flags =
 	-Wno-missing-field-initializers 
+	-Wpedantic
+	-Wall
 	-Wextra
+	-Wconversion
+	-Werror
 board_build.partitions = partitions.csv
 board_build.embed_txtfiles =
 	binary/webpage/index.html
